--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div id="container" class="container">
         <div class="title">
-            Назоватие цвет, а не слово:
+            Назовите цвет, а не слово:
         </div>
         <div id="colors" class="colors">
         </div>
